# FileManagePro

./: .gitignore  CMakeLists.txt  main.cpp  passwords.db
headers/: AudioFilePreview.h  FileStorage.h  ImageFilePreview.h  LoginWindow.h  MainWindow.h  TextFilePreview.h  VideoFilePreview.h
src/: AudioFilePreview.cpp  AudioFilePreview.h  FileStorage.cpp  FileStorage.h  ImageFilePreview.cpp  LoginWindow.cpp  MainWindow.cpp  MainWindow.h  TextFilePreview.cpp  TextFilePreview.h  VideoFilePreview.cpp
